BlackSoil.K8s.Poc/K8s objs/aks-aad/aks-helloworld.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: acs-helloworld-aks-helloworld
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: acs-helloworld-aks-helloworld
    spec:
      containers:
      - name: acs-helloworld-aks-helloworld
        image: neilpeterson/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: acs-helloworld-aks-helloworld
