BlackSoil.K8s.Poc/K8s objs/aks-aad/aks-helloworld_oauth2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld
spec:
  selector:
    app: acs-helloworld-aks-helloworld
  ports:
  - name: http
    port: 80
    targetPort: 4180
    protocol: TCP
