BlackSoil.K8s.Poc/K8s objs/aks-aad/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - azureaad-dnvgl.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: azureaad-dnvgl.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: aks-helloworld
          servicePort: 80
